@@ -1013,6 +1013,17 @@ systemSettings.purgeUrgentAlarm=Purge alarms with level 'urgent' older than
 systemSettings.purgeCriticalAlarm=Purge alarms with level 'critical' older than
 systemSettings.purgeLifeSafetyAlarm=Purge alarms with level 'life safety' older than
 systemSettings.purgeEvents=Purge events older than
+systemSettings.purgeDataConfirm=This will purge all point samples from the database. Are you sure?
+systemSettings.purgeDataWithPurgeSettingsConfirm=This will purge data using all purge settings.  Are you sure?
+systemSettings.purgeDataInProgress=Purging all point data, please wait...
+systemSettings.purgeDataComplete=Purge complete. {0} point samples deleted.
+systemSettings.purgeData=Purge all point values
+systemSettings.purgeNow=Purge now using purge settings
+systemSettings.purgeAllEvents=Purge all events
+systemSettings.purgeAllEventsComplete=Purge complete. {0} events deleted.
+systemSettings.purgeAllEventsConfirm=This will purge all events from the database. Are you sure?
+systemSettings.purgeAllEventsInProgress=Purging all events, please wait...
+
 systemSettings.uiPerformance=UI performance
 systemSettings.uiPerformance.high=High
 systemSettings.uiPerformance.med=Medium
@@ -1028,7 +1039,7 @@ systemSettings.instanceDescription=Instance description
 systemSettings.databaseType=Database type
 systemSettings.databaseSize=Database size
 systemSettings.noSqlDatabaseSize=NoSql Database size
-systemSettings.purgeNow=Purge now using point settings
+
 systemSettings.filedataSize=Filedata size
 systemSettings.totalSize=Total size
 systemSettings.historyCount=History count
@@ -1038,11 +1049,6 @@ systemSettings.testEmail=Your system settings test email was successfully sent.
 systemSettings.languageSettings=Language settings
 systemSettings.systemLanguage=System language
 systemSettings.langSaved=Language has been saved
-systemSettings.purgeDataConfirm=This will purge all point samples from the database. Are you sure?
-systemSettings.purgeDataWithPointSettingsConfirm=This will purge point samples using point settings.  Are you sure?
-systemSettings.purgeDataInProgress=Purging all data, please wait...
-systemSettings.purgeDataComplete=Purge complete. {0} point samples deleted.
-systemSettings.purgeData=Purge all data
 systemSettings.futureDateLimit=Discard point values future dated more than
 systemSettings.colourSettings=Colour settings
 systemSettings.chartBackgroundColour=Chart background
