@@ -11,6 +11,9 @@
 * Changed restrictions on Data point name and device name length to 255 characters.
 * Added H2 as default embedded data base
 * Changed Event Report's Acknowledge All and Silence All to perform the operation on the data contained in the report table
+* Removed Http Proxy and SMTP passwords from system settings export, if required to import use: emailSmtpPassword and httpClientProxyPassword for the json keys
+* Added ability to purge all events from system settings page
+* Cleaned up purge buttons to be more informative on system settings page
 
 *Version 2.3.0*
 * Added purge now options to all data sources
